WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309574
Safari loads huggingface.co slowly
https://bugs.webkit.org/show_bug.cgi?id=309574
Summary
Safari loads huggingface.co slowly
Nipun Shukla
Reported
2026-03-10 10:00:43 PDT
rdar://114904007
Attachments
Add attachment
proposed patch, testcase, etc.
Nipun Shukla
Comment 1
2026-03-10 10:32:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60278
EWS
Comment 2
2026-04-14 11:21:18 PDT
Committed
311212@main
(fb0de39d9421): <
https://commits.webkit.org/311212@main
> Reviewed commits have been landed. Closing PR #60278 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug