Safari loads huggingface.co slowly https://bugs.webkit.org/show_bug.cgi?id=309574 rdar://114904007

Reviewed by Antti Koivisto.

CSS rules like ".prose :where(h1):not(...)" land in the universal
rule bucket because :where() and :is() are not examined for
indexable selectors. This causes every element to be
checked against these rules during style recalculation, which causes
performance loss on huggingface.co.

This change extracts indexable tags from single argument :where/:is
and uses them for rule bucket indexing, allowing the style engine to
skip these rules for elements which can't match, avoiding unnecessary
work.

Without the fix a full relayout on
https://huggingface.co/docs/transformers/model_doc/auto takes ~1500 ms
while with the fix this takes ~500 ms. The included performance test
progresses from ~15 runs/s to ~21 runs/s.

There should be no functionality change associated with this change.
Correctness will be verified via existing tests.

* PerformanceTests/CSS/WhereIsRuleIndexing.html: Added.
* Source/WebCore/style/RuleSet.cpp:
(WebCore::Style::RuleSet::addRule):

Canonical link: https://commits.webkit.org/311212@main